--- a/CSS.css
+++ b/CSS.css
@@ -1,103 +1,86 @@
-body 
+*
 {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: white;
-    color: #333;
-    padding-top: 100px;
+    box-sizing: border-box;
 }
 
-.header-logo 
+/*Header Section*/
+header
 {
-    width: 150px;
-    height: auto;
-    filter: brightness(0) invert(1);
-    /* Make logo white */
-    margin-left: 1rem;
-}
-
-.navbar 
-{
-    background-color: #3b82f6;
-    height: 80px;
-    margin: 20px;
-    border-radius: 10px;
-    padding: 0.5rem;
-    position: fixed;
-}
-
-/*.drawer {
-  background-color: rgb(142, 160, 177); 
-  height: 100%;
-  width: 250px;
-  padding: 20px;
-}*/
-
-
-.navbar-brand 
-{
-    font-family: roboto;
-    font-weight: 500;
-    color: white;
-    font-size: 24px;
-    transition: 0.3s color;
-    text-decoration: none;
-    margin-left: 1.5rem;
-}
-
-.navbar-toggler 
-{
-    border: none;
-    font-size: 1.25rem;
-}
-
-.navbar-toggler:focus, .btn-close:focus 
-{
-    box-shadow: none;
-    outline: none;
-}
-
-.nav-link 
-{
-    color: white;
-    font-weight: 500;
     position: relative;
-    margin-left: 1rem;
+    background-color: #a8a5a54e;
+    text-align: center;
+    padding: 13px;
 }
 
-.nav-link:hover, .nav-link.active 
+.image
+{
+    width: 50px;
+    height: auto;
+    align-items: center;
+}
+
+header h1
+{
+  font-weight: 600;
+  font-size: 28px;
+  font-style: normal;
+  color: #3b82f6;
+}
+
+header p
+{
+    font-weight: 500;
+    font-style: normal;
+}
+
+.image:hover
+{
+    color: 	#2563eb;
+}
+
+header h1:hover
 {
     color: black;
 }
 
-@media screen (min-width: 991px)
-{
-    .nav-link::before 
-    {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 0;
-        height: 2px;
-        background-color: #009970;
-        visibility: hidden;
-        transition: 0.3s ease-in-out;
-    }
+/*Header Section End*/
 
-    .nav-link:hover::before, .nav-link.nav-link.active::before 
-    {
-        width: 100%;
-        visibility: visible;
-    }
+/*Navigation Bar*/
+.topnav
+{
+    overflow: hidden;
+    background-color: black;
 }
+
+.topnav a
+{
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.topnav ul
+{
+    list-style-type: none;
+}
+
+.topnav a:hover
+{
+    background-color: #ddd;
+    color: black;
+}
+/*End Navigation Bar*/
 
 footer 
 {
-    background: gray;
+    background: black;
     color: white;
     text-align: center;
-    padding: 1rem;
+    padding: 1rem ;
     display: block;
+    text-decoration: none;
+    height: auto;
 }
